traversal.snake.Snake.scala.error
Compilation error:
Snake:30: error: ';' expected but 'return' found.
      }return false
       ^